stateDiagram-v2
    %% L++ State Diagram: L++ Blueprint Linter
    [*] --> idle
    idle --> loaded : LOAD [blueprint is None]
    loaded --> loaded : LOAD
    loaded --> linting : LINT [blueprint is not None]
    linting --> linting : CHECK_UNREACHABLE
    linting --> linting : CHECK_DEAD_END
    linting --> linting : CHECK_UNUSED_GATES
    linting --> linting : CHECK_UNUSED_ACTIONS
    linting --> linting : CHECK_UNUSED_CONTEXT
    linting --> linting : CHECK_ORPHANED
    linting --> linting : CHECK_GATE_REFS
    linting --> linting : CHECK_ACTION_REFS
    linting --> linting : CHECK_DUPLICATES
    linting --> linting : CHECK_NAMING
    loaded --> idle : UNLOAD
    idle --> idle : CONFIGURE
    loaded --> loaded : CONFIGURE